build/generated-src/antlr/main/expression/ValidationParser.java
// Generated from expression\Validation.g4 by ANTLR 4.7.2

    package expression;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValidationParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Exist=19, Datatype=20, RESPONSE_LEFT=21, RESPONSE_RIGHT=22, 
		SORT=23, ASC=24, DESC=25, BY=26, MAX=27, MIN=28, Date=29, Pattern=30, 
		Match=31, Regex=32, Identifier=33, REGEX=34, Seperator=35, EuqalEuqal=36, 
		LogicalOperators=37, AdditionalOperators=38, OPERATORS=39, OP_Bracket=40, 
		WS=41;
	public static final int
		RULE_validationStatement = 0, RULE_v = 1, RULE_v0 = 2, RULE_v1 = 3, RULE_v2 = 4, 
		RULE_v3 = 5, RULE_v4 = 6, RULE_v5 = 7, RULE_v6 = 8, RULE_v7 = 9, RULE_v8 = 10, 
		RULE_v9 = 11, RULE_v10 = 12, RULE_v11 = 13, RULE_v12 = 14, RULE_dateTime = 15, 
		RULE_functionResult = 16, RULE_functionNames = 17, RULE_isMaxMin = 18, 
		RULE_order = 19, RULE_statement = 20, RULE_isNot = 21, RULE_keyString = 22, 
		RULE_type = 23, RULE_keyStringMap = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"validationStatement", "v", "v0", "v1", "v2", "v3", "v4", "v5", "v6", 
			"v7", "v8", "v9", "v10", "v11", "v12", "dateTime", "functionResult", 
			"functionNames", "isMaxMin", "order", "statement", "isNot", "keyString", 
			"type", "keyStringMap"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'-'", "':'", "'&'", "'contains'", "'startsWith'", "'endsWith'", 
			"'floor'", "'ceil'", "'round'", "'lengthOf'", "'sizeOf'", "'concat'", 
			"'!'", "'.'", "'[]'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "Exist", "Datatype", "RESPONSE_LEFT", 
			"RESPONSE_RIGHT", "SORT", "ASC", "DESC", "BY", "MAX", "MIN", "Date", 
			"Pattern", "Match", "Regex", "Identifier", "REGEX", "Seperator", "EuqalEuqal", 
			"LogicalOperators", "AdditionalOperators", "OPERATORS", "OP_Bracket", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Validation.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ValidationParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ValidationStatementContext extends ParserRuleContext {
		public List<VContext> v() {
			return getRuleContexts(VContext.class);
		}
		public VContext v(int i) {
			return getRuleContext(VContext.class,i);
		}
		public List<TerminalNode> Seperator() { return getTokens(ValidationParser.Seperator); }
		public TerminalNode Seperator(int i) {
			return getToken(ValidationParser.Seperator, i);
		}
		public ValidationStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validationStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterValidationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitValidationStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitValidationStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValidationStatementContext validationStatement() throws RecognitionException {
		ValidationStatementContext _localctx = new ValidationStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_validationStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			v();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Seperator) {
				{
				{
				setState(51);
				match(Seperator);
				setState(52);
				v();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContext extends ParserRuleContext {
		public V0Context v0() {
			return getRuleContext(V0Context.class,0);
		}
		public V11Context v11() {
			return getRuleContext(V11Context.class,0);
		}
		public VContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitV(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitV(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VContext v() throws RecognitionException {
		VContext _localctx = new VContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_v);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(58);
				v0();
				}
				break;
			case 2:
				{
				setState(59);
				v11();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V0Context extends ParserRuleContext {
		public V1Context v1() {
			return getRuleContext(V1Context.class,0);
		}
		public V2Context v2() {
			return getRuleContext(V2Context.class,0);
		}
		public V3Context v3() {
			return getRuleContext(V3Context.class,0);
		}
		public V4Context v4() {
			return getRuleContext(V4Context.class,0);
		}
		public V5Context v5() {
			return getRuleContext(V5Context.class,0);
		}
		public V6Context v6() {
			return getRuleContext(V6Context.class,0);
		}
		public V7Context v7() {
			return getRuleContext(V7Context.class,0);
		}
		public V8Context v8() {
			return getRuleContext(V8Context.class,0);
		}
		public V9Context v9() {
			return getRuleContext(V9Context.class,0);
		}
		public V10Context v10() {
			return getRuleContext(V10Context.class,0);
		}
		public V12Context v12() {
			return getRuleContext(V12Context.class,0);
		}
		public V0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v0; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterV0(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitV0(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitV0(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V0Context v0() throws RecognitionException {
		V0Context _localctx = new V0Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_v0);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(62);
				v1();
				}
				break;
			case 2:
				{
				setState(63);
				v2();
				}
				break;
			case 3:
				{
				setState(64);
				v3();
				}
				break;
			case 4:
				{
				setState(65);
				v4();
				}
				break;
			case 5:
				{
				setState(66);
				v5();
				}
				break;
			case 6:
				{
				setState(67);
				v6();
				}
				break;
			case 7:
				{
				setState(68);
				v7();
				}
				break;
			case 8:
				{
				setState(69);
				v8();
				}
				break;
			case 9:
				{
				setState(70);
				v9();
				}
				break;
			case 10:
				{
				setState(71);
				v10();
				}
				break;
			case 11:
				{
				setState(72);
				v12();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V1Context extends ParserRuleContext {
		public V1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v1; }
	 
		public V1Context() { }
		public void copyFrom(V1Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExistKeyContext extends V1Context {
		public IsNotContext isNot() {
			return getRuleContext(IsNotContext.class,0);
		}
		public TerminalNode Exist() { return getToken(ValidationParser.Exist, 0); }
		public KeyStringContext keyString() {
			return getRuleContext(KeyStringContext.class,0);
		}
		public KeyStringMapContext keyStringMap() {
			return getRuleContext(KeyStringMapContext.class,0);
		}
		public ExistKeyContext(V1Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterExistKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitExistKey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitExistKey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V1Context v1() throws RecognitionException {
		V1Context _localctx = new V1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_v1);
		try {
			_localctx = new ExistKeyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			isNot();
			setState(76);
			match(Exist);
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(77);
				keyString();
				}
				break;
			case 2:
				{
				setState(78);
				keyStringMap();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V2Context extends ParserRuleContext {
		public V2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v2; }
	 
		public V2Context() { }
		public void copyFrom(V2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DatatypeContext extends V2Context {
		public IsNotContext isNot() {
			return getRuleContext(IsNotContext.class,0);
		}
		public TerminalNode Datatype() { return getToken(ValidationParser.Datatype, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public KeyStringContext keyString() {
			return getRuleContext(KeyStringContext.class,0);
		}
		public KeyStringMapContext keyStringMap() {
			return getRuleContext(KeyStringMapContext.class,0);
		}
		public DatatypeContext(V2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterDatatype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitDatatype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitDatatype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V2Context v2() throws RecognitionException {
		V2Context _localctx = new V2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_v2);
		try {
			_localctx = new DatatypeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			isNot();
			setState(82);
			match(Datatype);
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(83);
				keyString();
				}
				break;
			case 2:
				{
				setState(84);
				keyStringMap();
				}
				break;
			}
			setState(87);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V3Context extends ParserRuleContext {
		public V3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v3; }
	 
		public V3Context() { }
		public void copyFrom(V3Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EqualContext extends V3Context {
		public TerminalNode EuqalEuqal() { return getToken(ValidationParser.EuqalEuqal, 0); }
		public List<KeyStringContext> keyString() {
			return getRuleContexts(KeyStringContext.class);
		}
		public KeyStringContext keyString(int i) {
			return getRuleContext(KeyStringContext.class,i);
		}
		public KeyStringMapContext keyStringMap() {
			return getRuleContext(KeyStringMapContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EqualContext(V3Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterEqual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitEqual(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitEqual(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V3Context v3() throws RecognitionException {
		V3Context _localctx = new V3Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_v3);
		try {
			_localctx = new EqualContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(89);
				keyString();
				}
				break;
			case 2:
				{
				setState(90);
				keyStringMap();
				}
				break;
			}
			setState(93);
			match(EuqalEuqal);
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(94);
				keyString();
				}
				break;
			case 2:
				{
				setState(95);
				type();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V4Context extends ParserRuleContext {
		public V4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v4; }
	 
		public V4Context() { }
		public void copyFrom(V4Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CheckForBothContext extends V4Context {
		public TerminalNode RESPONSE_LEFT() { return getToken(ValidationParser.RESPONSE_LEFT, 0); }
		public TerminalNode EuqalEuqal() { return getToken(ValidationParser.EuqalEuqal, 0); }
		public TerminalNode RESPONSE_RIGHT() { return getToken(ValidationParser.RESPONSE_RIGHT, 0); }
		public List<KeyStringContext> keyString() {
			return getRuleContexts(KeyStringContext.class);
		}
		public KeyStringContext keyString(int i) {
			return getRuleContext(KeyStringContext.class,i);
		}
		public List<KeyStringMapContext> keyStringMap() {
			return getRuleContexts(KeyStringMapContext.class);
		}
		public KeyStringMapContext keyStringMap(int i) {
			return getRuleContext(KeyStringMapContext.class,i);
		}
		public CheckForBothContext(V4Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterCheckForBoth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitCheckForBoth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitCheckForBoth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V4Context v4() throws RecognitionException {
		V4Context _localctx = new V4Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_v4);
		try {
			_localctx = new CheckForBothContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(RESPONSE_LEFT);
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(99);
				keyString();
				}
				break;
			case 2:
				{
				setState(100);
				keyStringMap();
				}
				break;
			}
			setState(103);
			match(EuqalEuqal);
			setState(104);
			match(RESPONSE_RIGHT);
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(105);
				keyString();
				}
				break;
			case 2:
				{
				setState(106);
				keyStringMap();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V5Context extends ParserRuleContext {
		public V5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v5; }
	 
		public V5Context() { }
		public void copyFrom(V5Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CheckForAdditionalOperatorsContext extends V5Context {
		public List<KeyStringContext> keyString() {
			return getRuleContexts(KeyStringContext.class);
		}
		public KeyStringContext keyString(int i) {
			return getRuleContext(KeyStringContext.class,i);
		}
		public TerminalNode AdditionalOperators() { return getToken(ValidationParser.AdditionalOperators, 0); }
		public CheckForAdditionalOperatorsContext(V5Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterCheckForAdditionalOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitCheckForAdditionalOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitCheckForAdditionalOperators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V5Context v5() throws RecognitionException {
		V5Context _localctx = new V5Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_v5);
		try {
			_localctx = new CheckForAdditionalOperatorsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			keyString();
			setState(110);
			match(AdditionalOperators);
			setState(111);
			keyString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V6Context extends ParserRuleContext {
		public V6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v6; }
	 
		public V6Context() { }
		public void copyFrom(V6Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CalculateContext extends V6Context {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EuqalEuqal() { return getToken(ValidationParser.EuqalEuqal, 0); }
		public KeyStringContext keyString() {
			return getRuleContext(KeyStringContext.class,0);
		}
		public List<TerminalNode> OPERATORS() { return getTokens(ValidationParser.OPERATORS); }
		public TerminalNode OPERATORS(int i) {
			return getToken(ValidationParser.OPERATORS, i);
		}
		public CalculateContext(V6Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterCalculate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitCalculate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitCalculate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V6Context v6() throws RecognitionException {
		V6Context _localctx = new V6Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_v6);
		int _la;
		try {
			_localctx = new CalculateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			statement();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPERATORS) {
				{
				{
				setState(114);
				match(OPERATORS);
				setState(115);
				statement();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(EuqalEuqal);
			setState(122);
			keyString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V7Context extends ParserRuleContext {
		public V7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v7; }
	 
		public V7Context() { }
		public void copyFrom(V7Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SortingContext extends V7Context {
		public TerminalNode SORT() { return getToken(ValidationParser.SORT, 0); }
		public List<KeyStringContext> keyString() {
			return getRuleContexts(KeyStringContext.class);
		}
		public KeyStringContext keyString(int i) {
			return getRuleContext(KeyStringContext.class,i);
		}
		public TerminalNode BY() { return getToken(ValidationParser.BY, 0); }
		public OrderContext order() {
			return getRuleContext(OrderContext.class,0);
		}
		public SortingContext(V7Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterSorting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitSorting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitSorting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V7Context v7() throws RecognitionException {
		V7Context _localctx = new V7Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_v7);
		try {
			_localctx = new SortingContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(SORT);
			setState(125);
			keyString();
			setState(126);
			match(BY);
			setState(127);
			keyString();
			setState(128);
			order();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V8Context extends ParserRuleContext {
		public V8Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v8; }
	 
		public V8Context() { }
		public void copyFrom(V8Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MaxMinCheckContext extends V8Context {
		public IsMaxMinContext isMaxMin() {
			return getRuleContext(IsMaxMinContext.class,0);
		}
		public KeyStringMapContext keyStringMap() {
			return getRuleContext(KeyStringMapContext.class,0);
		}
		public TerminalNode EuqalEuqal() { return getToken(ValidationParser.EuqalEuqal, 0); }
		public KeyStringContext keyString() {
			return getRuleContext(KeyStringContext.class,0);
		}
		public MaxMinCheckContext(V8Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).enterMaxMinCheck(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValidationListener ) ((ValidationListener)listener).exitMaxMinCheck(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationVisitor ) return ((ValidationVisitor<? extends T>)visitor).visitMaxMinCheck(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V8Context v8() throws RecognitionException {
		V8Context _localctx = new V8Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_v8);
		try {
			_localctx = new MaxMinCheckContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			isMaxMin();
			setState(131);
			keyStringMap();
			setState(132);
			match(EuqalEuqal);
			setState(133);
			keyString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
